--- a/src/SFA.Apprenticeships.Web.Recruit/Views/Admin/ProviderSite.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/Admin/ProviderSite.cshtml
@@ -10,7 +10,7 @@
 
 <p>@Html.RouteLink("Manage Provider Sites", RecruitmentRouteNames.AdminProviderSites)</p>
 
-@using (Html.BeginRouteForm(RecruitmentRouteNames.AdminEditProviderSite))
+@using (Html.BeginRouteForm(RecruitmentRouteNames.AdminEditProviderSite, FormMethod.Post, new { id = "admin-edit-provider-site-form" }))
 {
     @Html.AntiForgeryToken()
     @Html.Partial("ValidationSummary", ViewData.ModelState)
