--- a/src/SFA.Apprenticeships.Web.Recruit/Views/ProviderUser/VerifyEmail.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/ProviderUser/VerifyEmail.cshtml
@@ -12,7 +12,7 @@
     It’ll contain a 6-character code you’ll need in order to verify your email address.
 </p>
 
-@using (Html.BeginRouteForm(RecruitmentRouteNames.VerifyEmail, FormMethod.Post))
+@using (Html.BeginRouteForm(RecruitmentRouteNames.VerifyEmail, FormMethod.Post, new { id = "verify-email-form" }))
 {
     @Html.AntiForgeryToken()
     @Html.Partial("ValidationSummary", ViewData.ModelState)
