--- a/src/SFA.Apprenticeships.Web.Recruit/Views/VacancyPosting/PreviewVacancy.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/VacancyPosting/PreviewVacancy.cshtml
@@ -27,7 +27,7 @@
 
     else
     {
-        using (Html.BeginRouteForm(RecruitmentRouteNames.SubmitVacancy, FormMethod.Post))
+        using (Html.BeginRouteForm(RecruitmentRouteNames.SubmitVacancy, FormMethod.Post, new { id = "submit-vacancy-form" }))
         {
             @Html.HiddenFor(m => m.VacancyReferenceNumber)
 
