--- a/src/SFA.Apprenticeships.Web.Recruit/Views/Admin/ConfirmVacancies.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/Admin/ConfirmVacancies.cshtml
@@ -7,7 +7,7 @@
 
 <h1 id="heading" class="heading-xlarge">Transfer Vacancies</h1>
 
-@using (Html.BeginRouteForm(RecruitmentRouteNames.ConfirmVacancies))
+@using (Html.BeginRouteForm(RecruitmentRouteNames.ConfirmVacancies, FormMethod.Post, new { id = "admin-transfer-vacancies-chose-provider-form" }))
 {
     if (Model != null && Model.VacanciesToBeTransferredVm != null && Model.VacanciesToBeTransferredVm.Any())
     {
