--- a/src/SFA.Apprenticeships.Web.Recruit/Views/VacancyPosting/ConfirmEmployer.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/VacancyPosting/ConfirmEmployer.cshtml
@@ -20,7 +20,7 @@
     </div>
 </div>
 
-@using (Html.BeginRouteForm(RecruitmentRouteNames.ConfirmEmployer, FormMethod.Post))
+@using (Html.BeginRouteForm(RecruitmentRouteNames.ConfirmEmployer, FormMethod.Post, new { id = "confirm-employer-form" }))
 {
     @Html.DisplayFor(m => m, VacancyOwnerRelationshipViewModel.PartialView)
 
