--- a/src/SFA.Apprenticeships.Web.Recruit/Views/VacancyPosting/VacancyRequirementsProspects.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/VacancyPosting/VacancyRequirementsProspects.cshtml
@@ -4,7 +4,7 @@
 @using SFA.Apprenticeships.Web.Raa.Common.ViewModels.Vacancy
 @using SFA.Apprenticeships.Web.Recruit.Constants
 
-@using (Html.BeginRouteForm(RecruitmentRouteNames.VacancyRequirementsProspects, FormMethod.Post))
+@using (Html.BeginRouteForm(RecruitmentRouteNames.VacancyRequirementsProspects, FormMethod.Post, new { id = "vacancy-requirements-and-prospects-form" }))
 {
     @Html.HiddenFor(m => m.AutoSaveTimeoutInSeconds)
     @Html.DisplayFor(m => m, VacancyRequirementsProspectsViewModel.PartialView)
