RA-555: Adding form ids for manage an apprenticeship

--- a/src/SFA.Apprenticeships.Web.Manage/Views/Admin/ApiUser.cshtml
+++ b/src/SFA.Apprenticeships.Web.Manage/Views/Admin/ApiUser.cshtml
@@ -8,7 +8,7 @@
 
 <p>@Html.RouteLink("Manage API Users", ManagementRouteNames.AdminApiUsers)</p>
 
-@using (Html.BeginRouteForm(ManagementRouteNames.AdminEditApiUser))
+@using (Html.BeginRouteForm(ManagementRouteNames.AdminEditApiUser, FormMethod.Post, new { id = "admin-edit-api-user-form" }))
 {
     @Html.HiddenFor(m => m.ExternalSystemId)
 
