--- a/src/SFA.Apprenticeships.Web.Manage/Views/Admin/ResetApiUserPassword.cshtml
+++ b/src/SFA.Apprenticeships.Web.Manage/Views/Admin/ResetApiUserPassword.cshtml
@@ -6,7 +6,7 @@
 
 <h1 id="heading" class="heading-xlarge">Confirm Reset API User Password?</h1>
 
-@using (Html.BeginRouteForm(ManagementRouteNames.AdminResetApiUserPassword))
+@using (Html.BeginRouteForm(ManagementRouteNames.AdminResetApiUserPassword, FormMethod.Post, new { id = "admin-reset-api-user-password-form" }))
 {
     @Html.HiddenFor(m => m.ExternalSystemId)
 
