--- a/src/SFA.Apprenticeships.Web.Manage/Views/Vacancy/Questions.cshtml
+++ b/src/SFA.Apprenticeships.Web.Manage/Views/Vacancy/Questions.cshtml
@@ -2,7 +2,7 @@
 @using SFA.Apprenticeships.Web.Manage.Constants
 @using SFA.Apprenticeships.Web.Raa.Common.ViewModels.Vacancy
 
-@using (Html.BeginRouteForm(ManagementRouteNames.Questions, FormMethod.Post))
+@using (Html.BeginRouteForm(ManagementRouteNames.Questions, FormMethod.Post, new { id = "vacancy-questions-form" }))
 {
     @Html.DisplayFor(m => m, VacancyQuestionsViewModel.PartialView)
 
