--- a/src/SFA.Apprenticeships.Web.Manage/Views/Vacancy/TrainingDetails.cshtml
+++ b/src/SFA.Apprenticeships.Web.Manage/Views/Vacancy/TrainingDetails.cshtml
@@ -4,7 +4,7 @@
 @using SFA.Apprenticeships.Web.Raa.Common.ViewModels.Vacancy
 @model TrainingDetailsViewModel
 
-@using (Html.BeginRouteForm(ManagementRouteNames.TrainingDetails, FormMethod.Post))
+@using (Html.BeginRouteForm(ManagementRouteNames.TrainingDetails, FormMethod.Post, new { id = "vacancy-training-details-form" }))
 {
     @Html.DisplayFor(m => m, TrainingDetailsViewModel.PartialView)
 
