--- a/src/SFA.Apprenticeships.Web.Candidate/Views/ApprenticeshipApplication/Preview.cshtml
+++ b/src/SFA.Apprenticeships.Web.Candidate/Views/ApprenticeshipApplication/Preview.cshtml
@@ -13,7 +13,7 @@
     </ul>
 </div>
 
-@using (Html.BeginForm(null, "ApprenticeshipApplication", new { id = Model.VacancyId }, FormMethod.Post, new { autocomplete = "off" }))
+@using (Html.BeginForm(null, "ApprenticeshipApplication", new { id = Model.VacancyId }, FormMethod.Post, new { id = "apprenticeship-application-form", autocomplete = "off" }))
 {
     @Html.AntiForgeryToken()
     @Html.Partial("ValidationSummary", ViewData.ModelState)
