--- a/src/SFA.Apprenticeships.Web.Recruit/Views/ProviderUser/Home.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/ProviderUser/Home.cshtml
@@ -40,7 +40,7 @@
 
 @Html.Partial("ValidationSummary", ViewData.ModelState)
 
-@using (Html.BeginForm(null, "ProviderUser", FormMethod.Post, new { name = "provider-site-form" }))
+@using (Html.BeginForm(null, "ProviderUser", FormMethod.Post, new { id = "provider-site-form", name = "provider-site-form" }))
 {
     @Html.AntiForgeryToken()
 
