--- a/src/SFA.Apprenticeships.Web.Candidate/Views/ApprenticeshipSearch/_searchResults.cshtml
+++ b/src/SFA.Apprenticeships.Web.Candidate/Views/ApprenticeshipSearch/_searchResults.cshtml
@@ -47,14 +47,14 @@ else
 {
     <fieldset>
         <legend class="visuallyhidden">Search items</legend>
-        <div class="grid-row sfa-medium-bottom-margin">
+        <div class="grid-row">
             <div class="column-one-half">
                 <div class="width-all-1-3 hide-js inl-block"></div>
-                <div class="hide-nojs">
+                <div class="hide-nojs form-group">
                     <details class="sfa-no-bottom-margin sfa-small-top-padding">
                         <summary><span class="summary">More/less detail</span></summary>
                         <div class="panel panel-border-narrow" id="chooseDetails">
-                            <ul class="list-text list-checkradio">
+                            <ul class="list list-checkradio font-xsmall">
                                 @if (Model.VacancySearch.SearchMode == ApprenticeshipSearchMode.Category)
                                 {
                                     <li>
@@ -95,12 +95,14 @@ else
                 </div>
             </div>
             <div class="column-one-half sfa-align-right">
-                <label for="sort-results" class="heading-medium sfa-medium-right-margin">Sort results</label>
-                @Html.DropDownList("sortType", Model.SortTypes, new { @id = "sort-results", @class = "form-control" })
-                <noscript>
-                    <button style="float: right; margin-left: 5px;" class="button show-nojs" name="SearchAction" value="Sort">Sort</button>
-                </noscript>
-                <input id="SearchAction" name="SearchAction" value="Search" type="hidden" />
+                <div class="form-group">
+                    <label for="sort-results" class="heading-medium sfa-medium-right-margin">Sort results</label>
+                    @Html.DropDownList("sortType", Model.SortTypes, new { @id = "sort-results", @class = "form-control" })
+                    <noscript>
+                        <button style="float: right; margin-left: 5px;" class="button show-nojs" name="SearchAction" value="Sort">Sort</button>
+                    </noscript>
+                    <input id="SearchAction" name="SearchAction" value="Search" type="hidden" />
+                </div>
             </div>
         </div>
     </fieldset>
