--- a/src/SFA.Apprenticeships.Web.Manage/Views/Shared/_Layout.cshtml
+++ b/src/SFA.Apprenticeships.Web.Manage/Views/Shared/_Layout.cshtml
@@ -128,7 +128,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     <div class="column-half">
                         <p>
                             <strong class="phase-tag">BETA</strong>
-                            <span>You can help us improve this app by completing our <a href="https://www.surveymonkey.co.uk/r/2MZRS9H">5 minute survey</a>.</span>
+                            <span>This is a new service - your <a href="https://www.surveymonkey.co.uk/r/QLQTJQC">feedback</a> helps improve it.</span>
                         </p>
                     </div>
                     <div class="column-half sfa-navigation">
