--- a/src/SFA.Apprenticeships.Web.Recruit/Views/Shared/_Layout.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/Shared/_Layout.cshtml
@@ -135,7 +135,7 @@
                     <div class="column-one-half">
                         <p>
                             <strong class="phase-tag">BETA</strong>
-                            <span>You can help us improve this app by completing our <a href="https://www.surveymonkey.co.uk/r/2MZRS9H">5 minute survey</a>.</span>
+                            <span>This is a new service - your <a href="https://www.surveymonkey.co.uk/r/LB5ZJRM">feedback</a> helps improve it.</span>
                         </p>
                     </div>
                     <div class="column-one-half sfa-navigation">
